--- a/src/shared/organisms/banner/banner.module.scss
+++ b/src/shared/organisms/banner/banner.module.scss
@@ -2,10 +2,15 @@
   height: 720px;
   background-image: url(https://images.squarespace-cdn.com/content/v1/585ac0bb414fb5eed215d4e3/1588183554786-OM3GFIUQ8MVAE6ZMPNTG/Jen%26Tylan-Married_921.jpg);
   background-size: contain;
+  opacity: 0.5;
   @media screen and (min-width: 1600px) {
     height: 768px;
   }
   @media screen and (min-width: 1920px) {
     height: 840px;
+  }
+  @media screen and (max-width: 480px) {
+    height: 360px;
+    background-repeat: no-repeat;
   }
 }
