--- a/src/shared/organisms/events/events.module.scss
+++ b/src/shared/organisms/events/events.module.scss
@@ -12,7 +12,7 @@
   left: 0;
   width: 56%;
   height: 640px;
-  background-color: darkgreen;
+  background-color: #212121;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -22,6 +22,8 @@
   gap: 36px;
   h1 {
     font-size: 48px;
+    line-height: 72px;
+    letter-spacing: 2px;
   }
   p {
     line-height: 36px;
@@ -29,5 +31,12 @@
   }
   button {
     width: fit-content;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .content-card {
+    width: 100%;
+    height: fit-content;
   }
 }
