--- a/src/shared/organisms/services/services.module.scss
+++ b/src/shared/organisms/services/services.module.scss
@@ -3,8 +3,11 @@
   display: flex;
   justify-content: space-around;
   flex-wrap: wrap;
+  color: white;
   img {
     border-radius: 50%;
+    width: 300px;
+    height: 300px;
   }
 }
 
@@ -20,4 +23,11 @@
     text-align: center;
     line-height: 20px;
   }
+}
+
+.img-bg {
+  height: 300px;
+  width: 300px;
+  border-radius: 50%;
+  background-size: cover;
 }
