--- a/src/shared/organisms/services/services.module.scss
+++ b/src/shared/organisms/services/services.module.scss
@@ -1,3 +1,5 @@
+@import "../../../utils/scss-variables.scss";
+
 .services-container {
   padding: 72px 0;
   display: flex;
@@ -17,6 +19,9 @@
   flex-direction: column;
   align-items: center;
   gap: 16px;
+  h3 {
+    color: $secondary-color;
+  }
   p {
     font-size: 14px;
     color: grey;
