--- a/src/shared/organisms/testimonials/testimonials.module.scss
+++ b/src/shared/organisms/testimonials/testimonials.module.scss
@@ -1,16 +1,30 @@
+@import "../../../utils/scss-variables.scss";
+
 .testimonials-wrap {
   padding: 24px;
   background-color: #212121;
   background-repeat: no-repeat;
   background-position: center center;
   background-size: auto;
-  // background-color: rgb(239, 239, 239);
   background-image: url(https://infinityhospitalitygroup.com/wp-content/uploads/2016/06/quotes.png);
 }
 
 .testimonials-title-wrap {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  color: white;
+  padding-top: 48px;
+  margin-bottom: -108px;
   h1,
   p {
     text-transform: uppercase;
+  }
+  p {
+    font-size: 12px;
+    line-height: 16px;
+  }
+  h1 {
+    color: $secondary-color;
   }
 }
