--- a/src/shared/organisms/testimonials/testimonials.module.scss
+++ b/src/shared/organisms/testimonials/testimonials.module.scss
@@ -5,8 +5,8 @@
   background-color: #212121;
   background-repeat: no-repeat;
   background-position: center center;
-  background-size: auto;
-  background-image: url(https://infinityhospitalitygroup.com/wp-content/uploads/2016/06/quotes.png);
+  background-size: 200px;
+  background-image: url(/1.svg);
 }
 
 .testimonials-title-wrap {
