--- a/src/shared/organisms/header/header.module.scss
+++ b/src/shared/organisms/header/header.module.scss
@@ -1,4 +1,5 @@
 @import "../../../utils/scss-variables.scss";
+
 .headerWrap {
   background-color: black;
   padding: 12px 0;
@@ -31,5 +32,65 @@
   }
   &.right-links {
     justify-content: flex-end;
+  }
+}
+
+.mobile-menu,
+.opened-mobile-menu {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  background: black;
+  transform: translateX(-100%);
+  height: 100vh;
+  text-align: left;
+  padding: 2rem;
+  position: absolute;
+  top: 0;
+  left: 0;
+  transition: transform 0.3s ease-in-out;
+  list-style: none;
+  gap: 24px;
+
+  a {
+    font-size: 2rem;
+    text-transform: uppercase;
+    margin: 2rem 0;
+    font-weight: bold;
+    letter-spacing: 0.5rem;
+    color: $secondary-color;
+    text-decoration: none;
+    transition: color 0.3s linear;
+
+    &:hover {
+      color: gold;
+    }
+  }
+}
+.mobile-menu {
+  transform: translateX(-100%);
+}
+
+.opened-mobile-menu {
+  transform: translateX(0);
+}
+
+@media screen and (max-width: 480px) {
+  .mobile-menu,
+  .opened-mobile-menu {
+    width: 100%;
+    a {
+      font-size: 1.5rem;
+      text-align: center;
+    }
+  }
+  .headerContainer {
+    justify-content: flex-start;
+    img {
+      z-index: 10;
+    }
+  }
+  .linksList {
+    display: none;
   }
 }
