added z-index to logo

--- a/src/shared/organisms/header/header.module.scss
+++ b/src/shared/organisms/header/header.module.scss
@@ -86,9 +86,9 @@
   }
   .headerContainer {
     justify-content: flex-start;
-    img {
-      z-index: 10;
-    }
+  }
+  .ayd-logo-link {
+    z-index: 10;
   }
   .linksList {
     display: none;
