--- a/src/shared/organisms/banner/banner.module.scss
+++ b/src/shared/organisms/banner/banner.module.scss
@@ -1,8 +1,13 @@
 .banner-wrap {
   height: 720px;
-  background-image: url(https://images.squarespace-cdn.com/content/v1/585ac0bb414fb5eed215d4e3/1588183554786-OM3GFIUQ8MVAE6ZMPNTG/Jen%26Tylan-Married_921.jpg);
-  background-size: contain;
-  opacity: 0.8;
+  background-image: url(/banner-bg.jpg);
+  background-size: cover;
+  opacity: 1;
+
+  @media screen and (max-width: 1336px) {
+    height: 560px;
+  }
+
   @media screen and (min-width: 1600px) {
     height: 768px;
   }
