added events page

--- a/src/shared/organisms/header/header.module.scss
+++ b/src/shared/organisms/header/header.module.scss
@@ -25,7 +25,7 @@
   gap: 24px;
   align-items: center;
   li {
-    color: #d4b05f;
+    color: $secondary-color;
     :hover {
       color: gold;
     }
