--- a/src/shared/organisms/banner/banner.module.scss
+++ b/src/shared/organisms/banner/banner.module.scss
@@ -1,18 +1,19 @@
 .banner-wrap {
   height: 720px;
-  background-image: url(/banner-bg.jpg);
+  background-image: url(/banner-bg-1.jpg);
   background-size: cover;
-  opacity: 1;
+  opacity: 0.8;
+  background-position: top;
 
   @media screen and (max-width: 1336px) {
     height: 560px;
   }
 
   @media screen and (min-width: 1600px) {
-    height: 768px;
+    height: 680px;
   }
   @media screen and (min-width: 1920px) {
-    height: 840px;
+    height: 768px;
   }
   @media screen and (max-width: 480px) {
     height: 360px;
