--- a/src/utils/scss-variables.scss
+++ b/src/utils/scss-variables.scss
@@ -2,5 +2,5 @@ $header-height: 128px;
 $primary-color: black;
 $secondary-color: #d4b05f;
 $black-21: #212121;
-$text-color: grey;
+$text-color: white;
 $red: #b31459;
