--- a/src/shared/organisms/services/services.module.scss
+++ b/src/shared/organisms/services/services.module.scss
@@ -6,6 +6,7 @@
   justify-content: space-around;
   flex-wrap: wrap;
   color: white;
+  scroll-margin-top: $header-height;
   img {
     border-radius: 50%;
     width: 300px;
