--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -84,11 +84,12 @@ body {
   max-width: 100vw;
   overflow-x: hidden;
   background-color: black;
-  color:white
+  color:white;
 }
 
 body {
   color: rgb(var(--foreground-rgb));
+
 }
 
 a {
