--- a/src/shared/organisms/header/header.module.scss
+++ b/src/shared/organisms/header/header.module.scss
@@ -39,14 +39,13 @@
 .opened-mobile-menu {
   display: flex;
   flex-direction: column;
-  justify-content: center;
   background: black;
   transform: translateX(-100%);
   height: 100vh;
   text-align: left;
   padding: 2rem;
   position: absolute;
-  top: 0;
+  top: 100%;
   left: 0;
   transition: transform 0.3s ease-in-out;
   list-style: none;
@@ -54,10 +53,9 @@
 
   a {
     font-size: 2rem;
-    text-transform: uppercase;
     margin: 2rem 0;
     font-weight: bold;
-    letter-spacing: 0.5rem;
+    letter-spacing: 0.2rem;
     color: $secondary-color;
     text-decoration: none;
     transition: color 0.3s linear;
