--- a/src/shared/organisms/services/services.module.scss
+++ b/src/shared/organisms/services/services.module.scss
@@ -36,6 +36,11 @@
   width: 300px;
   border-radius: 50%;
   background-size: cover;
+  opacity: 1;
+  &:hover {
+    opacity: 0.7;
+    transition: all 0.5s ease-in-out;
+  }
 }
 
 @media screen and (max-width: 480px) {
