added number to footer

--- a/src/shared/organisms/footer/footer.module.scss
+++ b/src/shared/organisms/footer/footer.module.scss
@@ -38,6 +38,16 @@
   color: $secondary-color;
 }
 
+.item-sub-title {
+  font-size: 14px;
+  font-weight: bold;
+  margin-top: 16px;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  margin-bottom: 6px;
+  color: white;
+}
+
 .title {
   color: $secondary-color;
   margin-bottom: 4px;
